[gd_scene load_steps=9 format=3 uid="uid://28ale2iku1n4"]

[ext_resource type="Script" uid="uid://fmrvmyx3dskq" path="res://scripts/modes/game_play.gd" id="1_ymdu8"]
[ext_resource type="PackedScene" uid="uid://cjq41cf2jqg1h" path="res://scenes/hud.tscn" id="2_3qprp"]
[ext_resource type="Script" uid="uid://boe2tlkv8ivfw" path="res://scripts/game_board.gd" id="3_njofg"]
[ext_resource type="PackedScene" uid="uid://cpibgxbfm2p0r" path="res://scenes/test_panel.tscn" id="4_uiuk4"]
[ext_resource type="PackedScene" uid="uid://7ypwtymhkpm6" path="res://scenes/ui/game_over_menu.tscn" id="5_7ohk3"]
[ext_resource type="PackedScene" uid="uid://bsourh8co1vbn" path="res://scenes/ui/pause_menu.tscn" id="6_e7f05"]
[ext_resource type="Script" uid="uid://cx02txnu55y6f" path="res://scripts/core/input_controller.gd" id="7_3qprp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
bg_color = Color(0.2827017, 0.2827017, 0.2827017, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymdu8")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MainLayoutContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/MainLayoutContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HUD" parent="MarginContainer/MainLayoutContainer/LeftPanel" instance=ExtResource("2_3qprp")]
unique_name_in_owner = true
layout_mode = 2

[node name="GameBoard" type="Control" parent="MarginContainer/MainLayoutContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_njofg")

[node name="BoardBackground" type="Panel" parent="MarginContainer/MainLayoutContainer/GameBoard"]
layout_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_0wfyh")

[node name="BoardContainer" type="Node2D" parent="MarginContainer/MainLayoutContainer/GameBoard"]

[node name="RightPanel" type="Control" parent="MarginContainer/MainLayoutContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TestPanel" parent="MarginContainer/MainLayoutContainer/RightPanel" instance=ExtResource("4_uiuk4")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_right = 0.0
offset_bottom = 190.0
grow_horizontal = 0

[node name="GameOverMenu" parent="." instance=ExtResource("5_7ohk3")]
layout_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("6_e7f05")]
process_mode = 3
layout_mode = 1

[node name="InputController" type="Node" parent="."]
script = ExtResource("7_3qprp")
